# SteveScratchC

./: #SSCWindow.glade#  .gitignore  CMakeLists.txt  README.md  SSCWindow.glade  SSC代码风格规范.md  SSP.txt  SteveScratchC.cbp  SteveScratchC.cscope_file_list  SteveScratchC.depend  SteveScratchC.layout  genClosure.lua  icon.xcf  makefile  outputLibs.h  【必读】源码使用协议.txt
needcopy/: SSCWindow.glade
needcopy/shaders/: stage.fsh  stage.vsh
src/: Libs.c  Libs.h  Main.c  Main.h  Main.rc  chineseEncode.h  config.h  main.c  main.h  main.mo  main.po  main.rc  ssc_libs.c  ssc_libs.h  version.h
src/ssc/: specs.mo  specs.pot  ssc_main.c  ssc_main.h  ssc_specs.c  ssc_specs.h  ssc_widgets.c  ssc_widgets.h  zh_CN.po
src/ssc/block/: block.c  block.h  blockBase.c  blockBase.h  blockShape.c  blockShape.h
src/ssc/block/shapeDraw/: cmd.c  cmd.h  hat.c  hat.h  num.c  num.h  shapes.h
src/ssc/core/: SB3Reader.c  SB3Reader.h  SSCCore.c  SSCCore.h  SSCProject.c  SSCProject.h  SSCRender.h  ScratchObj.c  ScratchObj.h
src/ssc/core/scratch/: ScratchObj.c  ScratchObj.h  ScratchSprite.h  ScratchStage.c  ScratchStage.h
src/ssc/interpreter/: Interpreter.h  Thread.c  Thread.h
src/ssc/lua/: LuaScheduler.c  LuaScheduler.h  SSCLua.c  SSCLua.h  commandBar.c  commandBar.h  lua.c  lua.h  scheduler.c  scheduler.h
src/ssc/lua/classes/: SSCBlock.c  SSCBlock.h  SSCStage.c  SSCStage.h
src/ssc/scratch/: PaletteBuilder.c  PaletteBuilder.h  ScratchObj.h  ScratchSprite.c  ScratchSprite.h  editingScObj.c  editingScObj.h
src/ssc/stage/: ScratchStage.c  ScratchStage.h  stageRender.c  stageRender.h
src/ssc/ui/: GLObj.c  GLObj.h  SSCGL.c  SSCGL.h  SSCGlade.c  SSCGlade.h  SSCUI.c  SSCUI.h  UI2Core.c  UI2Core.h  UIEvents.c  UIEvents.h
src/ssc/widget/: topBarMenus.c  topBarMenus.h  topBarMenusFunction.c  topBarMenusFunction.h  widgetEvents.c  widgetEvents.h
